CHANGELOG
=========
+-----------------------+
| VERSION: 0.6.0RC2     |
+-----------------------+
BUGFIXES
12-04-06    Made instructions clearer for adding default module and manager
07-04-06    Link to new items corrected (alphasock@disona.net)
14-03-06    Fixed Config::merge behaviour (Miha Vrhovnik)
14-03-06    Fixed query for listing users with a left join (mstahv)

IMPROVEMENTS
11-04-06    Implemented observer support, example in RegisterMgr::_cmd_insert()
07-04-06    Code for Delegate class simplified to work with installations where PHP
            is compiled with --disable-reflection (jbpros)
06-04-06    Improved pre and post-process workflow
06-04-06    Added the ability to create a broadcast message that will appear on
            every screen, eg, "Maintenance planned at 22.00 GMT"
06-04-06    Added MySQL version detection, added more info to bug reporter
26-03-06    Modified SGL_Inflector::caseFix() to return the original string if a
            config key cannot be found to compare with, instead of false
26-03-06    Added ability to load navigation data during the install, so devs can
            create navigation that corresponds with their custom modules
20-03-06    Added Dutch translation (Peter Termaten)
20-03-06    Russian translations updated and enhanced (Dmitry Lakachauskis)
17-03-06    Improvements to module generator, CRUD added (Gerald Fischer)
17-03-06    Guestbook, FAQ, Documentor and Export modules improved, updated Russian
            translations (lakiboy)
17-03-06    Removed CSS hacks (Riccardo Magliocchetti and mstahv)
17-03-06    Additional include paths can now be added via Config
16-03-06    Added ability to implement custom filter chains
14-03-06    Default theme now config driven

+-----------------------+
| VERSION: 0.6.0RC1     |
+-----------------------+
BUGFIXES
21-02-06    Fixed bug: PageMgr does not handle manager names with multiple uppercase
            letters